--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="src/sass/main.scss" />
     <script defer src="src/js/controller.js"></script>
 
-    <title>Search over 1,000,000 recipes</title>
+    <title>Recipro</title>
   </head>
 
   <body>
